--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
-zendservershopware:
-  build: ./zend85
-  ports:
-    - 8080:80
-    - 10081:10081
-    - 10137:10137
-  links:
-    - mariadb
+version: '2'
+services:
+  zendservershopware:
+    build: ./zend85
+    ports:
+      - 8080:80
+      - 10081:10081
+      - 10137:10137
+    links:
+      - mariadb
 
-mariadb:
-  image: mariadb
-  ports:
-      - 3306:3306
-  environment:
-    - MYSQL_ROOT_PASSWORD=dev
-    - MYSQL_USER=dev
-    - MYSQL_PASSWORD=dev
-    - MYSQL_DATABASE=shopware
+  mariadb:
+    image: mariadb
+    ports:
+        - 3306:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=dev
+      - MYSQL_USER=dev
+      - MYSQL_PASSWORD=dev
+      - MYSQL_DATABASE=shopware
